--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- countup -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="./_js/jquery.counterup.min.js"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="./_js/jquery.counterup.min.js"></script> -->
     <!-- vticker -->
     <script src="./_js/jquery.vticker.min.js"></script>
     <!-- aos -->
